deploy: 17c1c698662dff5c551663fe87f3de5987b2bcb6

--- a/openapi/identity-api/1.0.0-alpha/identity-api.yaml
+++ b/openapi/identity-api/1.0.0-alpha/identity-api.yaml
@@ -1826,6 +1826,10 @@ components:
           format: int64
         participantContextId:
           type: string
+        properties:
+          type: object
+          additionalProperties:
+            type: object
         roles:
           type: array
           items:
