--- a/openapi/identity-api/identity-api.yaml
+++ b/openapi/identity-api/identity-api.yaml
@@ -1826,6 +1826,10 @@ components:
           format: int64
         participantContextId:
           type: string
+        properties:
+          type: object
+          additionalProperties:
+            type: object
         roles:
           type: array
           items:
