deploy: 0baf99c454532a1fba6861097298c5b0533dd380

--- a/openapi/issuer-api/1.0.0/issuer-api.yaml
+++ b/openapi/issuer-api/1.0.0/issuer-api.yaml
@@ -29,6 +29,14 @@ paths:
       parameters:
       - name: participantContextId
         in: path
+        description: Base64-Url encode Participant Context ID
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: participantContextId
+        in: path
         required: true
         style: simple
         explode: false
@@ -81,13 +89,21 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ApiErrorDetail"
-  /v1alpha/requests/{credentialRequestId}:
+  /v1alpha/participants/{participantContextId}/requests/{credentialRequestId}:
     get:
       tags:
       - Credential Request Status API
       description: Requests status information about an issuance request from an issuer
       operationId: getCredentialRequestStatus
       parameters:
+      - name: participantContextId
+        in: path
+        description: Base64-Url encode Participant Context ID
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       - name: credentialRequestId
         in: path
         description: ID of the Credential Request that was sent previously
@@ -96,9 +112,23 @@ paths:
         explode: false
         schema:
           type: string
+      - name: participantContextId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       - name: credentialRequestId
         in: path
         required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        required: false
         style: simple
         explode: false
         schema:
